--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "md5": "^2.2.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.4.11"
   },
   "devDependencies": {},
   "repository": {
